--- a/ressources/style.css
+++ b/ressources/style.css
@@ -1,3 +1,9 @@
+header h1 {
+  text-align: center; }
+
+header h1, body main h2, footer h3 {
+  color: #BF4080; }
+
 body {
   font: 100% "Space Mono", monospace;
   color: #6b717f;
@@ -5,85 +11,63 @@ body {
   padding: 0;
   background-color: #fff;
   overflow-x: hidden; }
+  body main {
+    padding: 0 1em; }
+    body main article {
+      display: flex;
+      flex-wrap: wrap; }
+      body main article section {
+        flex-grow: 1;
+        flex-basis: 45%;
+        border: 1px #6b717f solid;
+        -webkit-box-shadow: 10px 10px 15px -4px #6b717f;
+        -moz-box-shadow: 10px 10px 15px -4px #6b717f;
+        box-shadow: 10px 10px 15px -4px #6b717f;
+        padding: 16px;
+        margin: 16px;
+        clear: both;
+        overflow: auto;
+        box-sizing: border-box; }
+      body main article #selling-points {
+        flex-grow: 2;
+        flex-basis: 100%; }
+      body main article code {
+        background: #000;
+        border: 1px solid #6b717f;
+        color: #8C8C8C;
+        page-break-inside: avoid;
+        font-family: monospace;
+        font-size: 15px;
+        line-height: 1.6;
+        margin-bottom: 1.6em;
+        max-width: 100%;
+        overflow: auto;
+        padding: 1em 1.5em;
+        display: block;
+        word-wrap: break-word; }
+      body main article .before {
+        float: left;
+        width: 40%; }
+      body main article .after {
+        float: right;
+        width: 40%; }
+    body main .messages {
+      padding: 16px; }
+      body main .messages .success, body main .messages .error, body main .messages .warning {
+        border: 1px solid #8C8C8C;
+        padding: 16px;
+        color: #fff; }
+      body main .messages .success {
+        background-color: green; }
+      body main .messages .error {
+        background-color: red; }
+      body main .messages .warning {
+        background-color: orange; }
 
-main {
-  padding: 0 1em; }
-
-article {
-  display: flex;
-  flex-wrap: wrap; }
-
-article section {
-  flex-grow: 1;
-  flex-basis: 45%;
-  border: 1px #6b717f solid;
-  -webkit-box-shadow: 10px 10px 15px -4px #6b717f;
-  -moz-box-shadow: 10px 10px 15px -4px #6b717f;
-  box-shadow: 10px 10px 15px -4px #6b717f;
-  padding: 16px;
-  margin: 16px;
-  clear: both;
-  overflow: auto;
-  box-sizing: border-box; }
-
-article section#selling-points {
-  flex-grow: 2;
-  flex-basis: 100%; }
-
-article code {
-  background: #000;
-  border: 1px solid #6b717f;
-  color: #8C8C8C;
-  page-break-inside: avoid;
-  font-family: monospace;
-  font-size: 15px;
-  line-height: 1.6;
-  margin-bottom: 1.6em;
-  max-width: 100%;
-  overflow: auto;
-  padding: 1em 1.5em;
-  display: block;
-  word-wrap: break-word; }
-
-article code.before {
-  float: left;
-  width: 40%; }
-
-article code.after {
-  float: right;
-  width: 40%; }
-
-h1,
-h2,
-h3 {
-  color: #BF4080; }
-
-h1 {
-  text-align: center; }
-
-h3 {
+footer h3 {
   text-align: center;
   font-size: 1.5em;
   padding: 32px;
   margin-bottom: 0px; }
-
-.messages {
-  padding: 16px; }
-
-.success,
-.error,
-.warning {
-  border: 1px solid #8C8C8C;
-  padding: 16px;
-  color: #fff; }
-
-.success {
-  background-color: green; }
-
-.error {
-  background-color: red; }
-
-.warning {
-  background-color: orange; }
 
 /*# sourceMappingURL=style.css.map */
